--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 </head>
 <body>
     <h1>Api Fetch</h1>
-    <div id="info">
+    <input class="barraPesquisa" type="text" name="barraPesquisa" id="pesquisa" onkeyup="pesquisa()" placeholder="Digite um nome...">
+    <section id="info">
 
-    </div>
+    </section>
 
 </body>
 <script src="apiFetch.js"></script>
