--- a/index.html
+++ b/index.html
@@ -8,8 +8,24 @@
     <title>API Fetch</title>
 </head>
 <body>
-    <h1>Api Fetch</h1>
+    <header>
+        <h1>Api Fetch</h1>
+    </header>
+
     <input class="barraPesquisa" type="text" name="barraPesquisa" id="pesquisa" onkeyup="pesquisa()" placeholder="Digite um nome...">
+    <section style="text-align: justify;">
+        <form>
+            <label for="gender" style="color: white;">Gender:</label>
+            <select name="gender" id="gender">
+              <option value="all">All</option>
+              <option value="male">Male</option>
+              <option value="female">Female</option>
+              <option value="n/a">n/a</option>
+            </select>
+            <input type="button" value="Submit" onclick="filter_gender(gender.value)">
+          </form>
+    </section>
+
     <section id="info">
 
     </section>
