--- a/index.html
+++ b/index.html
@@ -26,10 +26,15 @@
           </form>
     </section>
 
+    <section>
+        <button onclick="prevPage()"><</button>
+        <button onclick="nextPage()">></button>
+    </section>
+
     <section id="info">
 
     </section>
-
+    
 </body>
 <script src="apiFetch.js"></script>
 </html>
