--- a/index.html
+++ b/index.html
@@ -14,20 +14,21 @@
 
     <input class="barraPesquisa" type="text" name="barraPesquisa" id="pesquisa" onkeyup="pesquisa()" placeholder="Digite um nome...">
     <section style="text-align: justify;">
-        <form>
-            <label for="gender" style="color: white;">Gender:</label>
+        <form class="filter">
+            <label for="gender" style="color: black; font-size:14pt">Gender:</label>
             <select name="gender" id="gender">
               <option value="all">All</option>
               <option value="male">Male</option>
               <option value="female">Female</option>
               <option value="n/a">n/a</option>
             </select>
-            <input type="button" value="Submit" onclick="filter_gender(gender.value)">
+            <input type="button" value="Filtrar" onclick="filter_gender(gender.value)">
           </form>
     </section>
 
-    <section>
+    <section class="paginacao">
         <button onclick="prevPage()"><</button>
+        <h2 id="paginaAtual">1</h1>
         <button onclick="nextPage()">></button>
     </section>
 
