--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <input class="barraPesquisa" type="text" name="barraPesquisa" id="pesquisa" onkeyup="pesquisa()" placeholder="Digite um nome...">
     <section style="text-align: justify;">
         <form class="filter">
-            <label for="gender" style="color: black; font-size:14pt">Gender:</label>
+            <label for="gender" style="color: black; font-size:16pt">Gender:</label>
             <select name="gender" id="gender">
               <option value="all">All</option>
               <option value="male">Male</option>
@@ -32,6 +32,9 @@
         <button onclick="nextPage()">></button>
     </section>
 
+        <button class="button" onclick="fetchAll()">Mostrar todos</button>
+    
+    
     <section id="info">
 
     </section>
